# pr-food

./: .gitignore  .gitmodules  pyproject.toml
notebooks/: graphs.qmd  process.ipynb  process.qmd  test.ipynb
src/: models.py
src/data/: data_process.py
