[project]
name = "pr-food"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "duckdb>=1.2.1",
    "geopandas>=1.0.1",
    "mapclassify>=2.8.1",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pynvim>=0.5.2",
]
